criacao do mapeamento das entidades

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_course_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=q1w2e3r4@
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.show-sql=true
